# Labs_AaDS

./: .gitignore
BinaryTree/: .gitignore  BinaryTree.cpp  BinaryTree.h  BinaryTree.sln  BinaryTree.vcxproj  BinaryTree.vcxproj.filters  BinaryTreeTester.cpp  BinaryTreeTester.h  CMakeLists.txt  main.cpp
BinaryTree/x64/Debug/: BinaryTree.exe.recipe  BinaryTree.ilk  BinaryTree.vcxproj.FileListAbsolute.txt  vc143.idb
BinaryTree/x64/Debug/BinaryTree.tlog/: CL.command.1.tlog  (+6 more)
BinaryTreeSearch/BinaryTreeSearch/: BinaryTree.cpp  BinaryTree.h  BinaryTreeSearch.cpp  BinaryTreeSearch.h  BinaryTreeSearch.vcxproj  BinaryTreeSearchTester.cpp  BinaryTreeSearchTester.h  BinaryTreeTester.cpp  BinaryTreeTester.h  CMakeLists.txt  Source.cpp
HashFunction/: CMakeLists.txt
HashFunction/ConsolePoject/HashTable/: CMakeLists.txt  HashTable.cpp  HashTable.h  main.cpp
HashFunction/Qt/: HashTable.cpp  HashTable.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp
Huffman Coding/: CMakeLists.txt  Huffman Coding.sln  Huffman Coding.vcxproj  Huffman Coding.vcxproj.filters  HuffmanTree.cpp  HuffmanTree.h  Node.cpp  encoded.txt  input.txt  input1.txt  main.cpp
Lab1ExternalSorts/Lab1ExternalSorts/: CMakeLists.txt  main.cpp
Lab1ExternalSorts/Lab1ExternalSorts.xcodeproj/: project.pbxproj
Lab1ExternalSorts/Lab1ExternalSorts/files/: fileSort.txt  labF1.txt
Lab2BinaryTree/: BinaryTree.cpp  BinaryTree.h  BinaryTreeTester.cpp  BinaryTreeTester.h  CMakeLists.txt  main.cpp
NaturalSorting/: NaturalSorting.sln  NaturalSorting.vcxproj  fileC.txt  fileD.txt  main.cpp  mainfile.txt
(+3 files in other folders)
